# CodeArXiv

./: .env.example  .gitignore  README.md  app.py  codex_fill_zh.py  llm_smoke_test.py  pyproject.toml  requirements.txt  run_daily.py  run_papers_cool.py  server_daily.py  tag_prompt.md  thumbnail.py
app/: __init__.py  auth.py  cli.py  db.py  feed.py  schema.sql  security.py
app/services/: favorites.py  paper_store.py
app/static/: styles.css
app/templates/: _paper_item.html  _paper_items.html  base.html  favorites.html  favorites_placeholder.html  index.html  login.html  paper_detail.html  settings.html  signup.html
tests/: conftest.py  test_auth.py  test_db_fk.py
