[project]
name = "codearxiv"
version = "0.1.0"
description = "A locally deployable tool to browse and discover the latest arXiv papers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "flask>=3.0.0",
  "python-dotenv>=1.0.0",
  "pymupdf>=1.24.0",
]

[project.optional-dependencies]
hf = ["huggingface-hub>=0.23.0"]
